--- a/index.html
+++ b/index.html
@@ -2,29 +2,18 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PixelChat</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chat Multiplayer Avatar</title>
   <style>
     body { margin: 0; overflow: hidden; background: #111; }
-    #nameForm {
-      position: absolute;
-      top: 40%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: #222;
-      color: white;
-      padding: 20px;
-      border-radius: 10px;
-      z-index: 10;
-      text-align: center;
-    }
-    #chatUI {
+    canvas { display: block; margin: auto; }
+    #chatForm {
       position: fixed;
       bottom: 10px;
       left: 50%;
       transform: translateX(-50%);
       width: 90%;
-      max-width: 600px;
+      max-width: 500px;
       display: flex;
       z-index: 10;
     }
@@ -32,40 +21,30 @@
       flex: 1;
       padding: 10px;
       font-size: 16px;
+      border-radius: 8px;
       border: none;
-      border-radius: 10px;
+      outline: none;
     }
     #sendBtn {
-      margin-left: 5px;
       padding: 10px 15px;
-      background: #4CAF50;
+      background: #4caf50;
       color: white;
       border: none;
-      border-radius: 10px;
+      border-radius: 8px;
+      margin-left: 5px;
       cursor: pointer;
     }
-    canvas { display: block; }
   </style>
 </head>
 <body>
 
-<!-- Form nama dan avatar -->
-<div id="nameForm">
-  <h3>Masukkan Nama & Pilih Avatar</h3>
-  <input type="text" id="nameInput" placeholder="Nama kamu" /><br/><br/>
-  <button onclick="startGame('pria')">👨 Pria</button>
-  <button onclick="startGame('wanita')">👩 Wanita</button>
-</div>
+  <form id="chatForm" onsubmit="return false;">
+    <input type="text" id="chatInput" placeholder="Ketik pesan..." />
+    <button id="sendBtn">Kirim</button>
+  </form>
 
-<!-- Chat -->
-<div id="chatUI" style="display: none;">
-  <input id="chatInput" placeholder="Ketik pesan..." />
-  <button id="sendBtn">Kirim</button>
-</div>
-
-<!-- Script -->
-<script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
-<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-<script src="main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3.70.0/dist/phaser.min.js"></script>
+  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
