--- a/index.html
+++ b/index.html
@@ -2,49 +2,81 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chat Multiplayer Avatar</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Chat Avatar Multiplayer</title>
   <style>
-    body { margin: 0; overflow: hidden; background: #111; }
+    body { margin: 0; overflow: hidden; background: #222; color: white; }
     canvas { display: block; margin: auto; }
-    #chatForm {
+    #avatarSelect {
+      position: fixed;
+      top: 30%;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #111;
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+      z-index: 999;
+    }
+    #avatarSelect button {
+      margin: 10px;
+      padding: 10px 20px;
+      font-size: 18px;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+    #chatBox {
       position: fixed;
       bottom: 10px;
       left: 50%;
       transform: translateX(-50%);
       width: 90%;
-      max-width: 500px;
+      max-width: 600px;
       display: flex;
-      z-index: 10;
+      z-index: 999;
     }
     #chatInput {
       flex: 1;
       padding: 10px;
       font-size: 16px;
-      border-radius: 8px;
       border: none;
+      border-radius: 10px;
       outline: none;
     }
-    #sendBtn {
-      padding: 10px 15px;
-      background: #4caf50;
+    #chatForm {
+      width: 100%;
+      display: flex;
+    }
+    #chatSend {
+      background-color: #4CAF50;
       color: white;
+      padding: 10px 15px;
       border: none;
-      border-radius: 8px;
       margin-left: 5px;
+      border-radius: 10px;
+      font-size: 16px;
       cursor: pointer;
     }
   </style>
 </head>
 <body>
 
-  <form id="chatForm" onsubmit="return false;">
-    <input type="text" id="chatInput" placeholder="Ketik pesan..." />
-    <button id="sendBtn">Kirim</button>
-  </form>
+<div id="avatarSelect">
+  <h3 style="color: white;">Pilih Avatar</h3>
+  <button onclick="selectAvatar('pria')">👨 Pria</button>
+  <button onclick="selectAvatar('wanita')">👩 Wanita</button>
+</div>
 
-  <script src="https://cdn.jsdelivr.net/npm/phaser@3.70.0/dist/phaser.min.js"></script>
-  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-  <script src="main.js"></script>
+<div id="chatBox">
+  <form id="chatForm">
+    <input type="text" id="chatInput" placeholder="Ketik pesan..." />
+    <button type="submit" id="chatSend">Kirim</button>
+  </form>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
+<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+<script src="main.js"></script>
+
 </body>
 </html>
