--- a/index.html
+++ b/index.html
@@ -3,28 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Chat Avatar Multiplayer</title>
+  <title>ChatX Avatar Multiplayer</title>
   <style>
     body { margin: 0; overflow: hidden; background: #222; color: white; }
     canvas { display: block; margin: auto; }
-    #avatarSelect {
-      position: fixed;
-      top: 30%;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #111;
-      padding: 20px;
-      border-radius: 10px;
-      text-align: center;
-      z-index: 999;
-    }
-    #avatarSelect button {
-      margin: 10px;
-      padding: 10px 20px;
-      font-size: 18px;
-      border-radius: 10px;
-      cursor: pointer;
-    }
     #chatBox {
       position: fixed;
       bottom: 10px;
@@ -33,7 +15,7 @@
       width: 90%;
       max-width: 600px;
       display: flex;
-      z-index: 999;
+      z-index: 10;
     }
     #chatInput {
       flex: 1;
@@ -57,26 +39,73 @@
       font-size: 16px;
       cursor: pointer;
     }
+    #avatarSelect {
+      position: fixed;
+      top: 30%;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #111;
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+      z-index: 999;
+    }
+    #avatarSelect button {
+      margin: 10px;
+      padding: 10px 20px;
+      font-size: 18px;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+    #emoteLabel {
+      position: fixed;
+      bottom: 100px;
+      left: 50%;
+      transform: translateX(-50%);
+      color: white;
+      font-size: 14px;
+      z-index: 9999;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 5px 10px;
+      border-radius: 8px;
+    }
   </style>
 </head>
 <body>
 
-<div id="avatarSelect">
-  <h3 style="color: white;">Pilih Avatar</h3>
-  <button onclick="selectAvatar('pria')">👨 Pria</button>
-  <button onclick="selectAvatar('wanita')">👩 Wanita</button>
-</div>
+  <!-- Avatar Selection -->
+  <div id="avatarSelect">
+    <h3 style="color: white;">Pilih Avatar</h3>
+    <button onclick="selectAvatar('pria')">👨 Pria</button>
+    <button onclick="selectAvatar('wanita')">👩 Wanita</button>
+  </div>
 
-<div id="chatBox">
-  <form id="chatForm">
-    <input type="text" id="chatInput" placeholder="Ketik pesan..." />
-    <button type="submit" id="chatSend">Kirim</button>
-  </form>
-</div>
+  <!-- Chat UI -->
+  <div id="chatBox">
+    <form id="chatForm">
+      <input type="text" id="chatInput" placeholder="Ketik pesan..." autocomplete="off" />
+      <button type="submit" id="chatSend">Kirim</button>
+    </form>
+  </div>
 
-<script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
-<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-<script src="main.js"></script>
+  <div id="emoteLabel">[1] Lompat | [2] Wave | [3] Dance</div>
 
+  <!-- Select avatar script -->
+  <script>
+    function selectAvatar(type) {
+      localStorage.setItem("avatarType", type);
+      document.getElementById("avatarSelect").style.display = "none";
+      location.reload();
+    }
+
+    if (localStorage.getItem("avatarType")) {
+      document.getElementById("avatarSelect").style.display = "none";
+    }
+  </script>
+
+  <!-- Libs & main script -->
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
+  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
