--- a/index.html
+++ b/index.html
@@ -1,109 +1,46 @@
 <!DOCTYPE html>
-<html lang="id">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ChatX Avatar Multiplayer</title>
+  <meta charset="UTF-8">
+  <title>Chat Avatar Multiplayer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { margin: 0; overflow: hidden; background: #222; color: white; }
-    canvas { display: block; margin: auto; }
+    body { margin: 0; overflow: hidden; background: #111; }
+    canvas { display: block; }
     #chatBox {
       position: fixed;
       bottom: 10px;
       left: 50%;
       transform: translateX(-50%);
+      display: flex;
       width: 90%;
       max-width: 600px;
-      display: flex;
       z-index: 10;
     }
     #chatInput {
       flex: 1;
       padding: 10px;
       font-size: 16px;
-      border: none;
       border-radius: 10px;
-      outline: none;
-    }
-    #chatForm {
-      width: 100%;
-      display: flex;
+      border: none;
     }
     #chatSend {
-      background-color: #4CAF50;
-      color: white;
       padding: 10px 15px;
-      border: none;
-      margin-left: 5px;
-      border-radius: 10px;
       font-size: 16px;
-      cursor: pointer;
-    }
-    #avatarSelect {
-      position: fixed;
-      top: 30%;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #111;
-      padding: 20px;
       border-radius: 10px;
-      text-align: center;
-      z-index: 999;
-    }
-    #avatarSelect button {
-      margin: 10px;
-      padding: 10px 20px;
-      font-size: 18px;
-      border-radius: 10px;
-      cursor: pointer;
-    }
-    #emoteLabel {
-      position: fixed;
-      bottom: 100px;
-      left: 50%;
-      transform: translateX(-50%);
+      background: #4CAF50;
       color: white;
-      font-size: 14px;
-      z-index: 9999;
-      background: rgba(0, 0, 0, 0.5);
-      padding: 5px 10px;
-      border-radius: 8px;
+      border: none;
     }
   </style>
 </head>
 <body>
-
-  <!-- Avatar Selection -->
-  <div id="avatarSelect">
-    <h3 style="color: white;">Pilih Avatar</h3>
-    <button onclick="selectAvatar('pria')">👨 Pria</button>
-    <button onclick="selectAvatar('wanita')">👩 Wanita</button>
-  </div>
-
-  <!-- Chat UI -->
   <div id="chatBox">
     <form id="chatForm">
-      <input type="text" id="chatInput" placeholder="Ketik pesan..." autocomplete="off" />
+      <input type="text" id="chatInput" placeholder="Ketik pesan..." />
       <button type="submit" id="chatSend">Kirim</button>
     </form>
   </div>
-
-  <div id="emoteLabel">[1] Lompat | [2] Wave | [3] Dance</div>
-
-  <!-- Select avatar script -->
-  <script>
-    function selectAvatar(type) {
-      localStorage.setItem("avatarType", type);
-      document.getElementById("avatarSelect").style.display = "none";
-      location.reload();
-    }
-
-    if (localStorage.getItem("avatarType")) {
-      document.getElementById("avatarSelect").style.display = "none";
-    }
-  </script>
-
-  <!-- Libs & main script -->
   <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
   <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
   <script src="main.js"></script>
