--- a/index.html
+++ b/index.html
@@ -3,68 +3,58 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pixel Chat RPG</title>
+  <title>PixelChat</title>
   <style>
-    body { margin: 0; background: #000; overflow: hidden; }
+    body { margin: 0; overflow: hidden; background: #222; color: white; }
     canvas { display: block; margin: auto; }
-    #chatUI {
+    #chatBox {
       position: fixed; bottom: 10px; left: 50%; transform: translateX(-50%);
-      width: 90%; max-width: 600px; display: flex; z-index: 1000;
+      width: 90%; max-width: 600px; display: flex; z-index: 10;
     }
     #chatInput {
       flex: 1; padding: 10px; font-size: 16px;
-      border-radius: 8px; border: none;
+      border: none; border-radius: 10px; outline: none;
     }
     #chatSend {
-      padding: 10px 20px; margin-left: 5px;
-      background: green; color: white; border: none;
-      border-radius: 8px; cursor: pointer;
+      background-color: #4CAF50; color: white; padding: 10px 15px;
+      border: none; margin-left: 5px; border-radius: 10px;
+      font-size: 16px; cursor: pointer;
     }
-    #setup {
-      position: fixed; top: 20%; left: 50%; transform: translateX(-50%);
-      background: #111; color: white; padding: 20px; border-radius: 12px;
-      z-index: 9999; text-align: center;
+    #avatarSelect {
+      position: fixed; top: 30%; left: 50%; transform: translateX(-50%);
+      background: #111; padding: 20px; border-radius: 10px;
+      text-align: center; z-index: 999;
     }
-    #setup input, #setup button {
-      margin-top: 10px;
+    #avatarSelect button {
+      margin: 10px; padding: 10px 20px; font-size: 18px;
+      border-radius: 10px; cursor: pointer;
     }
-    #emojiPicker {
-      position: absolute; bottom: 60px; left: 50%;
-      transform: translateX(-50%);
-      background: #fff; border: 1px solid #ccc; border-radius: 10px;
-      display: none; z-index: 1001;
+    #avatarUpload {
+      margin-top: 10px; color: white;
     }
-    .emoji {
-      font-size: 20px; padding: 5px; cursor: pointer;
+    #joystick {
+      position: fixed; bottom: 80px; left: 10px; z-index: 9999;
+      width: 100px; height: 100px;
     }
   </style>
 </head>
 <body>
 
-<div id="setup">
-  <h3>Masukkan Nama & Pilih Avatar</h3>
-  <input type="text" id="nameInput" placeholder="Nama kamu" /><br>
-  <button onclick="selectType('pria')">👨 Pria</button>
-  <button onclick="selectType('wanita')">👩 Wanita</button><br>
-  <input type="file" id="avatarUpload" accept="image/*" />
-  <button onclick="startGame()">Mulai</button>
+<div id="avatarSelect">
+  <h3 style="color: white;">Pilih Avatar</h3>
+  <button onclick="selectAvatar('pria')">👦 Pria</button>
+  <button onclick="selectAvatar('wanita')">👧 Wanita</button><br>
+  <input type="file" id="avatarUpload" accept="image/*">
 </div>
 
-<div id="chatUI">
+<div id="chatBox">
   <input type="text" id="chatInput" placeholder="Ketik pesan..." />
-  <button id="emojiBtn">🎨</button>
   <button id="chatSend">Kirim</button>
 </div>
 
-<div id="emojiPicker">
-  <span class="emoji">😀</span>
-  <span class="emoji">😂</span>
-  <span class="emoji">😍</span>
-  <span class="emoji">👍</span>
-  <span class="emoji">🔥</span>
-</div>
+<canvas id="joystick"></canvas>
 
-<script src="https://cdn.jsdelivr.net/npm/phaser@3"></script>
+<script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
 <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 <script src="main.js"></script>
 </body>
